[FIX] web, partner_autocomplete: fix the issue of autocomplet fields
url fields in website, for example link dialog has url field which will
have autocomplete, but hovering over autocompete dropdown item shows
hover effect on text only, hover effect should be on whole item, we
already have css for that but it was loaded in assets_backend, so to fix
this move css code related to autocompete in assets_common.

this will also fix partner_autocomplete widget, in contact form when
searching on company, suggestions are displayed which shows extra space
in autocomplete item after name and image, set max-width of autocompete
to 400px;

task: 2066536
closes: #36997

--- a/addons/web/static/src/scss/dropdown.scss
+++ b/addons/web/static/src/scss/dropdown.scss
@@ -11,19 +11,6 @@
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.176);
 
     .ui-menu-item {
-        padding: 0;
-        > a {
-            display: block;
-            color: $dropdown-link-color;
-
-            @extend %dropdown-li-a-padding;
-
-            &.ui-state-active {
-                border: none;
-                font-weight: normal;
-                margin: 0;
-            }
-        }
         &.o_m2o_dropdown_option {
             text-indent: 20px
         }
